--- a/css/src.css
+++ b/css/src.css
@@ -1,7 +1,8 @@
 body,
 html {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  font-family: 'Muli', sans-serif; }
 
 .nav {
   display: flex;
@@ -9,7 +10,7 @@ html {
   align-items: center;
   height: 75px;
   width: 100%;
-  background: #fff; }
+  font-family: 'Philosopher', sans-serif; }
   .nav .logo {
     margin-right: auto; }
   .nav .button {
@@ -40,7 +41,8 @@ html {
   background-color: #111;
   overflow-x: hidden;
   padding-top: 60px;
-  transition: 0.5s; }
+  transition: 0.5s;
+  font-family: 'Philosopher', sans-serif; }
   .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
@@ -57,7 +59,7 @@ html {
     font-size: 36px;
     margin-left: 50px; }
 
-#vid {
+.video #vid {
   object-fit: initial;
   width: 100%;
   height: 100vh; }
@@ -65,6 +67,16 @@ html {
 .content {
   display: flex;
   flex-direction: column; }
+  .content .intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    padding: 100px 0;
+    font-family: 'Philosopher', sans-serif;
+    font-weight: bold;
+    width: 80%; }
   .content .block .text {
     width: 100%;
     height: 350px;
@@ -75,7 +87,8 @@ html {
     .content .block .text div h3 {
       width: 85%;
       text-align: left;
-      margin: auto; }
+      margin: auto;
+      font-family: 'Philosopher', sans-serif; }
     .content .block .text div p {
       width: 85%;
       margin: auto;
@@ -88,9 +101,97 @@ html {
     background: url("../img/food1.jpg"); }
   .content .block .img2 {
     background: url("../img/food2.jpg"); }
+  .content .block .img3 {
+    background: url("../img/food3.jpg"); }
   .content .block-odd {
     display: flex;
     flex-direction: column-reverse; }
+  .content .stuff {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    text-align: center;
+    padding: 100px 0; }
+    .content .stuff div {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 30px 0; }
+      .content .stuff div img {
+        width: 70%;
+        margin: auto; }
+      .content .stuff div p {
+        width: 85%;
+        margin: auto; }
+
+.menu {
+  background: #000;
+  color: #fff;
+  margin: auto;
+  text-align: center;
+  padding: 50px 0; }
+  .menu div {
+    width: 90%;
+    margin: auto;
+    text-align: left; }
+    .menu div h1 {
+      border-bottom: 1px solid #fff; }
+    .menu div ul {
+      text-align: center;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap; }
+      .menu div ul li {
+        width: 100%; }
+        .menu div ul li h3 {
+          text-align: left; }
+        .menu div ul li p {
+          text-align: left; }
+
+footer {
+  background: #FFED00;
+  display: flex;
+  flex-direction: column; }
+  footer h3,
+  footer h4 {
+    font-family: 'Philosopher', sans-serif; }
+  footer a {
+    color: #000; }
+  footer .form {
+    display: flex;
+    flex-direction: column; }
+    footer .form .sign-up {
+      width: 50%; }
+    footer .form input {
+      color: #000;
+      border: none;
+      background: transparent;
+      border-bottom: 1px solid #000; }
+      footer .form input:focus {
+        outline: none; }
+    footer .form input[type="submit"] {
+      background: #000;
+      color: #fff; }
+    footer .form ::-webkit-input-placeholder {
+      color: #000; }
+    footer .form :-ms-input-placeholder {
+      color: #000; }
+    footer .form ::-moz-placeholder {
+      color: #000;
+      opacity: 1; }
+    footer .form :-moz-placeholder {
+      color: #000;
+      opacity: 1; }
+  footer .copyright {
+    margin: 0 auto;
+    padding: 10px 0;
+    text-align: left; }
 
 @media screen and (min-width: 700px) {
   .nav .links {
@@ -101,6 +202,8 @@ html {
   .sidenav {
     display: none; }
 
+  .content .intro {
+    padding: 200px 0; }
   .content .block {
     width: 100%;
     display: flex;
@@ -108,6 +211,35 @@ html {
     .content .block .text {
       width: 50%; }
     .content .block .img {
-      width: 50%; } }
+      width: 50%; }
+  .content .stuff {
+    flex-direction: row;
+    flex-grow: 1; }
+    .content .stuff div {
+      margin: 0; }
+      .content .stuff div img {
+        width: 80%; }
+
+  .menu div ul {
+    flex-direction: row; }
+    .menu div ul li {
+      width: 50%; }
+
+  footer {
+    flex-direction: row;
+    flex-grow: 1;
+    flex-basis: 0; }
+    footer .contact,
+    footer .contact-info,
+    footer .form {
+      width: 33.5%; }
+    footer .contact-info,
+    footer .form {
+      text-align: right; }
+    footer .form {
+      text-align: right; }
+      footer .form .sign-up {
+        width: 100%;
+        text-align: right; } }
 
 /*# sourceMappingURL=src.css.map */
