--- a/css/src.css
+++ b/css/src.css
@@ -12,7 +12,15 @@ html {
   width: 100%;
   font-family: 'Philosopher', sans-serif; }
   .nav .logo {
-    margin-right: auto; }
+    margin-right: auto;
+    margin-left: 10px;
+    color: #FF0000;
+    border: 1px solid #000;
+    padding: 5px 10px;
+    font-size: 2em;
+    text-decoration: none; }
+    .nav .logo:visited {
+      color: #FF0000; }
   .nav .button {
     border: none;
     margin: 10px 10px;
@@ -21,15 +29,6 @@ html {
     cursor: pointer; }
   .nav .links {
     display: none; }
-  .nav a {
-    font-size: 2em;
-    color: black;
-    text-decoration: none;
-    margin: 0 10px; }
-    .nav a:visited {
-      color: black; }
-    .nav a:hover {
-      color: gray; }
 
 .sidenav {
   height: 100%;
@@ -47,11 +46,11 @@ html {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #fff;
     display: block;
     transition: 0.3s; }
     .sidenav a:hover, .offcanvas .sidenav a:focus {
-      color: #f1f1f1; }
+      color: #FF0000; }
   .sidenav .closebtn {
     position: absolute;
     top: 0;
@@ -69,21 +68,30 @@ html {
   flex-direction: column; }
   .content .intro {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: auto;
     text-align: center;
+    line-height: 1.5;
     padding: 100px 0;
+    font-size: 2em;
     font-family: 'Philosopher', sans-serif;
     font-weight: bold;
-    width: 80%; }
+    width: 80%;
+    color: #000; }
+    .content .intro h1 {
+      color: #FF0000; }
   .content .block .text {
     width: 100%;
     height: 350px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; }
+    align-items: center;
+    background: #000;
+    color: #fff;
+    line-height: 1.3; }
     .content .block .text div h3 {
       width: 85%;
       text-align: left;
@@ -103,9 +111,12 @@ html {
     background: url("../img/food2.jpg"); }
   .content .block .img3 {
     background: url("../img/food3.jpg"); }
-  .content .block-odd {
+  .content .block-even {
     display: flex;
     flex-direction: column-reverse; }
+    .content .block-even .text {
+      background: #F5F5F5;
+      color: #000; }
   .content .stuff {
     display: flex;
     flex-direction: column;
@@ -119,12 +130,16 @@ html {
       flex-direction: column;
       justify-content: center;
       margin: 30px 0; }
+      .content .stuff div h3 {
+        color: #FF0000; }
       .content .stuff div img {
-        width: 70%;
+        width: 75%;
         margin: auto; }
       .content .stuff div p {
-        width: 85%;
-        margin: auto; }
+        width: 75%;
+        margin: 10px auto;
+        line-height: 1.5;
+        text-align: center; }
 
 .menu {
   background: #000;
@@ -136,7 +151,7 @@ html {
     width: 90%;
     margin: auto;
     text-align: left; }
-    .menu div h1 {
+    .menu div h2 {
       border-bottom: 1px solid #fff; }
     .menu div ul {
       text-align: center;
@@ -154,39 +169,48 @@ html {
         .menu div ul li p {
           text-align: left; }
 
+.drinks {
+  background: #fff;
+  color: #000; }
+
 footer {
   background: #FFED00;
+  background: #FF0000;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  color: #000;
+  padding: 10px 10px; }
   footer h3,
   footer h4 {
     font-family: 'Philosopher', sans-serif; }
   footer a {
-    color: #000; }
+    color: #fff; }
   footer .form {
     display: flex;
     flex-direction: column; }
     footer .form .sign-up {
       width: 50%; }
     footer .form input {
-      color: #000;
+      color: #fff;
       border: none;
       background: transparent;
-      border-bottom: 1px solid #000; }
+      border-bottom: 1px solid #000;
+      padding: 5px 0; }
       footer .form input:focus {
         outline: none; }
     footer .form input[type="submit"] {
       background: #000;
-      color: #fff; }
+      color: #fff;
+      padding: 5px 10px; }
     footer .form ::-webkit-input-placeholder {
-      color: #000; }
+      color: #fff; }
     footer .form :-ms-input-placeholder {
-      color: #000; }
+      color: #fff; }
     footer .form ::-moz-placeholder {
-      color: #000;
+      color: #fff;
       opacity: 1; }
     footer .form :-moz-placeholder {
-      color: #000;
+      color: #fff;
       opacity: 1; }
   footer .copyright {
     margin: 0 auto;
@@ -195,7 +219,17 @@ footer {
 
 @media screen and (min-width: 700px) {
   .nav .links {
-    display: inline-block; }
+    display: inline-block;
+    font-size: 2em;
+    color: black;
+    text-decoration: none;
+    margin: 0 10px;
+    transition: all 0.25s; }
+    .nav .links:visited {
+      color: #000; }
+    .nav .links:hover {
+      color: #FF0000;
+      border-bottom: 1px solid #000; }
   .nav .button {
     display: none; }
 
@@ -203,7 +237,7 @@ footer {
     display: none; }
 
   .content .intro {
-    padding: 200px 0; }
+    padding: 150px 0; }
   .content .block {
     width: 100%;
     display: flex;
