--- a/css/src.css
+++ b/css/src.css
@@ -4,47 +4,11 @@ html {
   padding: 0;
   font-family: 'Muli', sans-serif; }
 
-/* Dropdown Button */
-.dropbtn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer; }
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #3e8e41; }
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-  position: relative;
-  display: inline-block; }
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1; }
-
-/* Links inside the dropdown */
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block; }
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {
-  background-color: #f1f1f1; }
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
   display: block; }
+
+.hide {
+  display: none; }
 
 .nav {
   display: flex;
@@ -56,13 +20,13 @@ html {
   .nav .logo {
     margin-right: auto;
     margin-left: 10px;
-    color: #FF0000;
+    color: #FF3B49;
     border: 1px solid #000;
     padding: 5px 10px;
     font-size: 2em;
     text-decoration: none; }
     .nav .logo:visited {
-      color: #FF0000; }
+      color: #FF3B49; }
   .nav .button {
     border: none;
     margin: 10px 10px;
@@ -92,7 +56,7 @@ html {
     display: block;
     transition: 0.3s; }
     .sidenav a:hover, .offcanvas .sidenav a:focus {
-      color: #FF0000; }
+      color: #FF3B49; }
   .sidenav .closebtn {
     position: absolute;
     top: 0;
@@ -123,7 +87,7 @@ html {
     width: 80%;
     color: #000; }
     .content .intro h1 {
-      color: #FF0000; }
+      color: #FF3B49; }
   .content .block .text {
     width: 100%;
     height: 350px;
@@ -138,7 +102,8 @@ html {
       width: 85%;
       text-align: left;
       margin: auto;
-      font-family: 'Philosopher', sans-serif; }
+      font-family: 'Philosopher', sans-serif;
+      color: #FF3B49; }
     .content .block .text div p {
       width: 85%;
       margin: auto;
@@ -173,7 +138,7 @@ html {
       justify-content: center;
       margin: 30px 0; }
       .content .stuff div h3 {
-        color: #FF0000; }
+        color: #FF3B49; }
       .content .stuff div img {
         width: 75%;
         margin: auto; }
@@ -182,6 +147,28 @@ html {
         margin: 10px auto;
         line-height: 1.5;
         text-align: center; }
+
+.menu-select {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: #FF3B49;
+  height: 100px; }
+  .menu-select button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 2em;
+    color: #fff;
+    margin: 15px; }
+    .menu-select button:hover {
+      color: #000; }
+    .menu-select button:focus {
+      outline: none; }
+  .menu-select .selected {
+    color: #000;
+    border-bottom: 1px solid #000; }
 
 .menu {
   background: #000;
@@ -194,7 +181,9 @@ html {
     margin: auto;
     text-align: left; }
     .menu div h2 {
-      border-bottom: 1px solid #fff; }
+      border-bottom: 5px solid #fff; }
+    .menu div section {
+      margin: 75px auto; }
     .menu div ul {
       text-align: center;
       list-style: none;
@@ -215,18 +204,24 @@ html {
   background: #fff;
   color: #000; }
   .drinks div h2 {
-    border-bottom: 1px solid #000; }
+    border-bottom: 5px solid #000; }
+
+.desserts {
+  color: #fff; }
+  .desserts div h2 {
+    border-bottom: 5px solid #000; }
 
 footer {
-  background: #FFED00;
-  background: #FF0000;
+  background: #FF3B49;
   display: flex;
   flex-direction: column;
-  color: #000;
+  color: #fff;
   padding: 10px 10px; }
   footer h3,
   footer h4 {
     font-family: 'Philosopher', sans-serif; }
+  footer h4 {
+    color: #000; }
   footer a {
     color: #fff; }
   footer .form {
@@ -272,7 +267,7 @@ footer {
     .nav .links:visited {
       color: #000; }
     .nav .links:hover {
-      color: #FF0000;
+      color: #FF3B49;
       border-bottom: 1px solid #000; }
   .nav .button {
     display: none; }
