added menu items

--- a/css/src.scss
+++ b/css/src.scss
@@ -208,7 +208,8 @@ html {
     }
     .selected {
         color: #000;
-        border-bottom: 1px solid #000;
+        font-weight: bold;
+        border-bottom: 3px solid #000;
     }
 }
 
@@ -244,6 +245,7 @@ html {
                 }
                 p {
                     text-align: left;
+                    width: 90%;
                 }
             }
         }
