--- a/css/src.css
+++ b/css/src.css
@@ -168,7 +168,8 @@ html {
       outline: none; }
   .menu-select .selected {
     color: #000;
-    border-bottom: 1px solid #000; }
+    font-weight: bold;
+    border-bottom: 3px solid #000; }
 
 .menu {
   background: #000;
@@ -198,7 +199,8 @@ html {
         .menu div ul li h3 {
           text-align: left; }
         .menu div ul li p {
-          text-align: left; }
+          text-align: left;
+          width: 90%; }
 
 .drinks {
   background: #fff;
