added our story page

--- a/css/src.css
+++ b/css/src.css
@@ -213,6 +213,23 @@ html {
   .desserts div h2 {
     border-bottom: 5px solid #fff; }
 
+.story {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: auto;
+  text-align: center;
+  line-height: 1.5;
+  height: 100vh;
+  font-size: 2em;
+  font-family: 'Philosopher', sans-serif;
+  font-weight: bold;
+  width: 80%;
+  color: #000; }
+  .story h1 {
+    color: #FF3B49; }
+
 footer {
   background: #FF3B49;
   display: flex;
